# discord-activity-badge

./: .dockerignore  .env_template  .gitignore  .markdownlint.json  Dockerfile  LICENSE  Pipfile  README.md  action.yml  docker_test.yml  pyproject.toml
!github/workflows/: unittest.yaml
.github/workflows/: codeql.yml  docker_deploy.yml  docker_test.yml  docket_test.yml  main.yml  script_test.yml  test_run.yml
src/: api.py  args.py  badge.py  client.py  entrypoint.py  main.py  modules.py  test_api.py  test_readme_fetch.py  utils.py
src/attributes/: attributes.py  client_handler.py
src/elements/: constants.py  constraints.py  decorators.py  enums.py  exceptions.py  properties.py  types.py  typing.py
src/modules/: api.py  bot.py  client.py
src/modules/utils/: logging.py
src/properties/: discord_client.py  filestream.py  github_api.py  test.py
tests/: async_api_connect.py  asyncio_future_demo.py  benchmark.py  constraints.py  readme_fetch_to_read.py  unit_entrypoint.py
