[tool.poetry]
name = "discord-rich-presence-activity-badge"
version = "0.1.0"
description = "Show your Discord Presence Activity to your Github Profile README as a Badge. | Powered by Docker, Discord.py, and PyGithub."
authors = ["Janrey Licas <self.codexlink@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
aiohttp = "^3.7.4"
urllib3 = "^1.26.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.910"
python-dotenv = "^0.18.0"
"discord.py-stubs" = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"